<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">호서대 셔틀버스</string>

    <string name="tab_cCam">천안캠퍼스</string>
    <string name="tab_terminal">천안터미널</string>
    <string name="tab_station">천안역</string>
    <string name="tab_hospital">충무병원</string>
    <string name="tab_road">쌍용동</string>
    <string name="tab_ktx">천안아산역</string>
    <string name="tab_aCam">아산캠퍼스</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- 온양순환 시간표 출력에서 쓰임 -->
    <string name="onyang_column1">아캠\n출발</string>
    <string name="onyang_column2">배방역</string>
    <string name="onyang_column3">시외버스\n터미널</string>
    <string name="onyang_column4">온양\n온천역</string>
    <string name="onyang_column5">배방역</string>
    <string name="onyang_column6">아캠\n도착</string>

    <!-- 광고를 위한 문자열 -->
    <string name="app_id">ca-app-pub-1197409946903481~2996154117</string>
    <string name="banner_ad_unit_id">ca-app-pub-1197409946903481/6630069378</string>
    <!-- 테스트용 -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <!-- 설정창에서 쓰임 -->
    <string name="campusPref_key">campusPref_key</string>
    <string name="campusPref_title">캠퍼스 설정</string>
    <string name="campusPref_dialogTitle">
        캠퍼스 설정 (앱 재시작 후 적용)\n
        표시되는 정류장 순서 변경\n
    </string>
    <string name="campusPref_summary">summary 초기화 오류</string>
    <string name="campusPref_defaultValue">cCam</string>

    <string name="termPref_key">termPref_key</string>
    <string name="termPref_title">시간표 설정</string>
    <string name="termPref_dialogTitle">
        시간표 설정\n
        시작시 보여줄 기본 시간표 설정
    </string>
    <string name="termPref_summary">summary 초기화 오류</string>
    <string name="termPref_defaultValue">term</string>

    <string name="privacyPref_key">privacyPref_key</string>

    <string name="ref_notice">
        * 학교 홈페이지에서 제공하는 시간표를 준수합니다.\n
        * 별도의 특별운행은 표시되지 않습니다.\n
        * 아이폰은 지원하지 않습니다.
    </string>

</resources>