<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_onyang"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 1번째 표 : 학기중 평일 온양순환 -->
            <TableLayout
                android:id="@+id/onyang_table1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:stretchColumns="*">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:id="@+id/onyang_table1_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column1"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column2"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column3"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column4"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column5"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column6"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

            <!-- 한 줄짜리 공백 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <!-- 2번째 표 : 학기중 주말 온양순환 -->
            <TableLayout
                android:id="@+id/onyang_table2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:stretchColumns="*">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:id="@+id/onyang_table2_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column1"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column2"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column3"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column4"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column5"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column6"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <!-- 3번째 표 : 방학중 온양순환 -->
            <TableLayout
                android:id="@+id/onyang_table3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:stretchColumns="*">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:id="@+id/onyang_table3_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column1"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column2"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column3"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column4"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column5"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column6"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <!-- 4번째 표 : 특별 시간표 온양순환 -->
            <TableLayout
                android:id="@+id/onyang_table4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:stretchColumns="*">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:id="@+id/onyang_table4_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column1"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column2"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column3"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column4"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column5"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="3dp"
                        android:text="@string/onyang_column6"
                        android:textColor="@color/White"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>